buildscript {
	ext {
		springBootVersion = '1.5.4.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}
apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'application'

archivesBaseName = "app"
mainClassName = 'com.sorbSoft.CabAcademie.CabAcademieApplication'
applicationName = 'app'
defaultTasks = ['stage']

jar {
	baseName = 'CabAcademieServer'
	version = '0.0.1-SNAPSHOT'
}
sourceCompatibility = 1.8
targetCompatibility = 1.8

task wrapper(type: Wrapper) {
	gradleVersion = '2.7'
}

repositories {
	mavenCentral()
}

task stage {
	dependsOn installApp
}

dependencies {
	compile('org.springframework.boot:spring-boot-starter-freemarker')
	runtime('org.springframework.boot:spring-boot-devtools')
	compile('org.springframework.boot:spring-boot-starter-web')
	testCompile('org.springframework.boot:spring-boot-starter-test')
	compile('org.springframework.boot:spring-boot-starter-data-jpa')
	compile('org.springframework.boot:spring-boot-starter-security')
	compile('org.springframework.boot:spring-boot-starter-actuator')
	compile group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.3.0.Beta2'
	compile group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.1.Final'
	compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '1.5.4.RELEASE'
	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
	compileOnly('org.projectlombok:lombok')
	runtime('com.h2database:h2')
	compile group: 'org.webjars', name: 'jquery', version: '3.2.1'
	compile group: 'org.webjars', name: 'bootstrap', version: '3.2.0'
	compile group: 'org.springframework.security', name: 'spring-security-config', version: '4.2.3.RELEASE'
	compile group: 'org.springframework.security', name: 'spring-security-web', version: '4.2.3.RELEASE'
	compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity4', version: '3.0.2.RELEASE'
	compile group: 'org.json', name: 'json', version: '20090211'
	// https://mvnrepository.com/artifact/org.postgresql/postgresql
	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.11'

	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'

}